manuscripts/elife-51889/v1/manuscript.md
# A delayed fractionated dose RTS,S AS01 vaccine regimen mediates                    protection via improved T follicular helper and B cell responses

## Authors

- Suresh Pallikkuth<sup>1</sup>
- Sidhartha Chaudhury<sup>2</sup>
- Pinyi Lu<sup>2</sup>
- Li Pan<sup>1</sup>
- Erik Jongert<sup>3</sup>
- Ulrike Wille-Reece<sup>4</sup>
- Savita Pahwa<sup>5</sup> ([ORCID: 0000-0002-4470-4216](https://orcid.org/0000-0002-4470-4216)) †

### Affiliations

1. Microbiology and                        Immunology University of Miami Miller School of                        Medicine Miami United                    States
2. Telemedicine and Advanced Technology                        Research Center Biotechnology HPC Software                        Applications Institute, U.S. Army Medical Research and Materiel                        Command Maryland United                    States
3. GSK Vaccine Rixensart Belgium
4. PATH's Malaria Vaccine                        Initiative PATH's Malaria Vaccine                        Initiative Washington DC United                        States
5. Miami Center for AIDS Research,                        Department of Microbiology and Immunology University of Miami Miller School of Medicine Miami United States

† Corresponding author

## Abstract

Malaria-071, a controlled human malaria infection trial, demonstrated that                    administration of three doses of RTS,S/AS01 malaria vaccine given at one month                    intervals was inferior to a delayed fractional dose (DFD) schedule (62.5% vs                    86.7% protection respectively). To investigate the underlying immunologic                    mechanism, we analyzed the B and T peripheral follicular helper cell (pTfh)                    responses. Here we show that protection in both study arms was associated with                    early induction of functional IL-21-secreting circumsporozoite (CSP)-specific                    pTfh cells together with induction of CSP-specific memory B cell responses after                    the 2nd dose that persisted after the 3rd dose. Data                    integration of key immunologic measures identified a subset of non-protected                    individuals in the standard (STD) vaccine arm who lost prior protective B cell                    responses after receiving the 3rd vaccine dose. We conclude that the                    DFD regimen favors persistence of functional B cells post 3rd                    dose.
